# sparkle-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: settings_template.ini
gameworks/: GFSDK_SSAO.h  GFSDK_SSAO_D3D11_ext.hpp  GFSDK_SSAO_D3D11_ext.win64.cpp  LICENSE
gameworks/lib/: GFSDK_SSAO_D3D11_ext.win64.lib
src/: main.rs  util.rs  utils.rs
src/app_handler/: mod.rs
src/controller/: controller.rs  input_handler.rs
src/d3d11/: backend.rs  geometry.rs  mod.rs  renderer.rs  shaders.rs
src/drawing/: generate.rs  geometry.rs  mod.rs
src/drawing/d3d11/: backend.rs  cbuffer.rs  drawable.rs  mod.rs  sampler.rs  shaders.rs
src/drawing/opengl/: mod.rs
src/drawing/scenegraph/: drawable.rs  mod.rs  node.rs
src/editor/: edit_commands.rs  gizmo.rs  mod.rs  picking.rs  transform.rs  ui.rs  undo.rs
src/engine/: backend.rs  compute_push.rs  draw_programs.rs  generate.rs  geometry.rs  mod.rs  renderer.rs  scene_data.rs  scene_info.rs  settings.rs  skybox.rs  ssao.rs
src/engine/d3d11/: cbuffer.rs  drawable.rs  mod.rs  sampler.rs  sbuffer.rs  shaders.rs  skybox.rs  textures.rs
src/engine/gameworks/: hbao_plus.rs  mod.rs
src/engine/procedural/: mod.rs
src/engine/scenegraph/: drawable.rs  mod.rs  node.rs
src/engine/vulkan_backend/: buffer.rs  egui.rs  gpu_backend_impl.rs  image_layout_transition.rs  mod.rs  renderpass.rs  rt.rs  texture.rs  util.rs
src/engine/wgpu_backend/: buffer.rs  mod.rs  texture.rs
src/import/: mod.rs
src/input/: controller.rs  first_person.rs  input_handler.rs  mod.rs  orbit.rs
src/shaders/: blend_pixel.hlsl  deferred_light_pixel.hlsl  deferred_light_pixel_packing.hlsl  deferred_light_vertex.hlsl  deferred_pre_pixel.hlsl  deferred_pre_pixel_packing.hlsl  deferred_pre_vertex.hlsl  light.hlsli  mp_pixel.hlsl  mp_vertex.hlsl  pbr.hlsli  pixel.hlsl  pixel_pbr.hlsl  shadow.hlsli  shared_pixel.hlsli  skybox_pixel.hlsl  skybox_vertex.hlsl  sm_pixel.hlsl  sm_vertex.hlsl  ssao_pixel.hlsl  vertex.hlsl
src/shaders/slang/: blend.slang  example.pxl.slang  example.vert.slang
src/shaders/slang/compute/: scattering_comp.slang
src/shaders/slang/deferred/: light_pixel.slang  light_pixel_packing.slang  light_vertex.slang  pre_pixel.slang  pre_pixel_packing.slang  pre_vertex.slang
src/shaders/slang/egui/: egui.frag.slang  egui.vert.slang
src/shaders/slang/main_pass/: pixel.slang  vertex.slang
src/shaders/slang/modules/: color_utils.slang  light.slang  parallax.slang  pbr.slang  push_constants.slang  shadow.slang  shadow_utils.slang  util.slang
src/shaders/slang/rt/: any_hit.slang  closest_hit.slang  miss.slang  miss_shadow.slang  raygen.slang
src/shaders/slang/shadow_mapping/: sm_pixel.slang  sm_vert.slang
src/shaders/slang/skybox/: sky_pixel.slang  sky_vertex.slang
src/shaders/slang/ssao/: ssao_blur_pixel.slang  ssao_blur_vertex.slang
src/shaders/spv/: blend.spv  example.pxl.spv  example.vert.spv
src/shaders/spv/compute/: scattering_comp.spv
src/shaders/spv/deferred/: light_pixel.spv  light_pixel_packing.spv  light_vertex.spv  pre_pixel.spv  pre_pixel_packing.spv  pre_vertex.spv
src/shaders/spv/egui/: egui.frag.spv  egui.vert.spv
src/shaders/spv/main_pass/: pixel.spv  vertex.spv
src/shaders/spv/rt/: any_hit.spv  closest_hit.spv  miss.spv  miss_shadow.spv  raygen.spv
src/shaders/spv/shadow_mapping/: sm_pixel.spv  sm_vert.spv
src/shaders/spv/skybox/: sky_pixel.spv  sky_vertex.spv
src/shaders/spv/ssao/: ssao_blur_pixel.spv  ssao_blur_vertex.spv  ssao_pixel.spv  ssao_vertex.spv
src/shaders/wgsl/: deferred_light.wgsl  deferred_pre.wgsl  forward.wgsl  output.wgsl  shadow.wgsl  skybox.wgsl  ssao.wgsl  ssao_blur.wgsl
src/window/: linux.rs  mod.rs  windows.rs
tools/compile-shaders/: Cargo.toml
tools/compile-shaders/src/: main.rs
