[workspace]
members = ["tools/compile-shaders"]

[package]
name = "sparkle"
version = "0.1.0"
authors = ["Elena Gantner <elena.gantner@linesofcode.at>"]
edition = "2024"
build = "build.rs"

[dependencies]
ash = "0.38.0"
nalgebra-glm = "0.20.0"
image = "0.25.2"
gltf = "1.4.1"
rust-ini = "0.21.3"
rand = "0.10.1"
winit = "0.30"
wgpu = "29.0.3"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
serde = { version = "1", features = ["derive"] }
ron = "0.12.1"

[build-dependencies]
shader-slang = "0.1.0"

# From doc.rust-lang.org:
# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 1 # controls the `--opt-level` the compiler builds with.
# 0-1 is good for debugging. 2 is well-optimized. Max is 3.
# 's' attempts to reduce size, 'z' reduces size even more.
debug = true # (u32 or bool) Include debug information (debug symbols).
# Equivalent to `-C debuginfo=2` compiler flag.
rpath = false # controls whether compiler should set loader paths.
# If true, passes `-C rpath` flag to the compiler.
lto = false # Link Time Optimization usually reduces size of binaries
# and static libraries. Increases compilation time.
# If true, passes `-C lto` flag to the compiler, and if a
# string is specified like 'thin' then `-C lto=thin` will
# be passed.
debug-assertions = true # controls whether debug assertions are enabled
# (e.g., debug_assert!() and arithmetic overflow checks)
codegen-units = 16 # if > 1 enables parallel code generation which improves
# compile times, but prevents some optimizations.
# Passes `-C codegen-units`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
incremental = true # whether or not incremental compilation is enabled
# This can be overridden globally with the CARGO_INCREMENTAL
# environment variable or `build.incremental` config
# variable. Incremental is only used for path sources.
overflow-checks = true # use overflow checks for integer arithmetic.
# Passes the `-C overflow-checks=...` flag to the compiler.

# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# The testing profile, used for `cargo test` (for `cargo test --release` see
# the `release` and `bench` profiles).
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

# The benchmarking profile, used for `cargo bench` (and the test targets and
# unit tests for `cargo test --release`).
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false
